아이콘 갤러리 업데이트

--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
     <h1>아이콘 갤러리</h1>
     <div class="ds-metadata">
       <span class="ds-update-date">마지막 업데이트: 2025. 3. 9.</span>
-      <span class="ds-count">총 아이콘 수: 2</span>
+      <span class="ds-count">총 아이콘 수: 3</span>
     </div>
   </header>
   
@@ -395,14 +395,14 @@
       <label for="group-filter">그룹:</label>
       <select id="group-filter">
         <option value="all">모든 그룹</option>
-        <option value="기타">기타</option><option value="ê¸°í">ê¸°í</option>
+        <option value="기타">기타</option><option value="ÃªÂ¸Â°Ã­ÂÂ">ÃªÂ¸Â°Ã­ÂÂ</option>
       </select>
     </div>
   </div>
 
   <div class="ds-content">
     <section class="ds-section" data-group="기타">
-      <h2>기타 <span class="ds-count-badge">1</span></h2>
+      <h2>기타 <span class="ds-count-badge">2</span></h2>
       
       <div class="icon-gallery">
         <div class="icon-card" data-name="favorite" data-group="기타" data-component-set="SystemIcon2">
@@ -424,13 +424,32 @@
             <div class="icon-id">21:22</div>
           </div>
         </div>
+        <div class="icon-card" data-name="filter" data-group="기타" data-component-set="SystemIcon">
+          <div class="icon-preview">
+            <img alt="filter" class="icon-image" src="https://figma-alpha-api.s3.us-west-2.amazonaws.com/images/793f28e2-fc73-4c8b-ac0f-a5210700c3ae">
+            <button class="copy-button" title="SVG 복사" data-svg="https%3A%2F%2Ffigma-alpha-api.s3.us-west-2.amazonaws.com%2Fimages%2F793f28e2-fc73-4c8b-ac0f-a5210700c3ae">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
+                <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
+              </svg>
+            </button>
+          </div>
+          <div class="icon-info">
+            <div class="icon-name">filter</div>
+            <div class="icon-meta">
+              <span class="icon-group" title="그룹">기타</span>
+              <span class="icon-component-set" title="컴포넌트 세트">SystemIcon</span>
+            </div>
+            <div class="icon-id">1:136</div>
+          </div>
+        </div>
       </div>
     </section>
-    <section class="ds-section" data-group="ê¸°í">
-      <h2>ê¸°í <span class="ds-count-badge">1</span></h2>
+    <section class="ds-section" data-group="ÃªÂ¸Â°Ã­ÂÂ">
+      <h2>ÃªÂ¸Â°Ã­ÂÂ <span class="ds-count-badge">1</span></h2>
       
       <div class="icon-gallery">
-        <div class="icon-card" data-name="favorite" data-group="ê¸°í" data-component-set="SystemIcon2">
+        <div class="icon-card" data-name="favorite" data-group="ÃªÂ¸Â°Ã­ÂÂ" data-component-set="SystemIcon2">
           <div class="icon-preview">
             <img alt="favorite" class="icon-image" src="https://figma-alpha-api.s3.us-west-2.amazonaws.com/images/966adfc6-7983-4de5-835f-97833a52a377">
             <button class="copy-button" title="SVG 복사" data-svg="https%3A%2F%2Ffigma-alpha-api.s3.us-west-2.amazonaws.com%2Fimages%2F966adfc6-7983-4de5-835f-97833a52a377">
@@ -443,7 +462,7 @@
           <div class="icon-info">
             <div class="icon-name">favorite</div>
             <div class="icon-meta">
-              <span class="icon-group" title="그룹">ê¸°í</span>
+              <span class="icon-group" title="그룹">ÃªÂ¸Â°Ã­ÂÂ</span>
               <span class="icon-component-set" title="컴포넌트 세트">SystemIcon2</span>
             </div>
             <div class="icon-id">21:22</div>
@@ -467,7 +486,7 @@
 <script>
   // 디버깅 정보 출력
   console.log('아이콘 갤러리가 로드되었습니다.');
-  console.log('총 아이콘 수:', 2);
+  console.log('총 아이콘 수:', 3);
   
   // 검색 기능
   const searchInput = document.getElementById('icon-search');
