아이콘 갤러리 업데이트

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
       <label for="group-filter">그룹:</label>
       <select id="group-filter">
         <option value="all">모든 그룹</option>
-        <option value="기타">기타</option><option value="ÃªÂ¸Â°Ã­ÂÂ">ÃªÂ¸Â°Ã­ÂÂ</option>
+        <option value="기타">기타</option><option value="ê¸°í">ê¸°í</option>
       </select>
     </div>
   </div>
@@ -445,11 +445,11 @@
         </div>
       </div>
     </section>
-    <section class="ds-section" data-group="ÃªÂ¸Â°Ã­ÂÂ">
-      <h2>ÃªÂ¸Â°Ã­ÂÂ <span class="ds-count-badge">1</span></h2>
+    <section class="ds-section" data-group="ê¸°í">
+      <h2>ê¸°í <span class="ds-count-badge">1</span></h2>
       
       <div class="icon-gallery">
-        <div class="icon-card" data-name="favorite" data-group="ÃªÂ¸Â°Ã­ÂÂ" data-component-set="SystemIcon2">
+        <div class="icon-card" data-name="favorite" data-group="ê¸°í" data-component-set="SystemIcon2">
           <div class="icon-preview">
             <img alt="favorite" class="icon-image" src="https://figma-alpha-api.s3.us-west-2.amazonaws.com/images/966adfc6-7983-4de5-835f-97833a52a377">
             <button class="copy-button" title="SVG 복사" data-svg="https%3A%2F%2Ffigma-alpha-api.s3.us-west-2.amazonaws.com%2Fimages%2F966adfc6-7983-4de5-835f-97833a52a377">
@@ -462,7 +462,7 @@
           <div class="icon-info">
             <div class="icon-name">favorite</div>
             <div class="icon-meta">
-              <span class="icon-group" title="그룹">ÃªÂ¸Â°Ã­ÂÂ</span>
+              <span class="icon-group" title="그룹">ê¸°í</span>
               <span class="icon-component-set" title="컴포넌트 세트">SystemIcon2</span>
             </div>
             <div class="icon-id">21:22</div>
