--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
     <h1>아이콘 갤러리</h1>
     <div class="ds-metadata">
       <span class="ds-update-date">마지막 업데이트: 2025. 3. 10.</span>
-      <span class="ds-count">총 아이콘 수: 2</span>
+      <span class="ds-count">총 아이콘 수: 1</span>
     </div>
   </header>
   
@@ -395,7 +395,7 @@
       <label for="group-filter">그룹:</label>
       <select id="group-filter">
         <option value="all">모든 그룹</option>
-        <option value="기타">기타</option><option value="favorite">favorite</option>
+        <option value="기타">기타</option>
       </select>
     </div>
   </div>
@@ -405,10 +405,10 @@
       <h2>기타 <span class="ds-count-badge">1</span></h2>
       
       <div class="icon-gallery">
-        <div class="icon-card" data-name="search" data-group="기타" data-component-set="SystemIcon2">
+        <div class="icon-card" data-name="list" data-group="기타" data-component-set="SystemIcon">
           <div class="icon-preview">
-            <img alt="search" class="icon-image" src="https://figma-alpha-api.s3.us-west-2.amazonaws.com/images/ea56c2c2-d4a3-40a9-8dcd-100b2a352e28">
-            <button class="copy-button" title="SVG 복사" data-svg="https%3A%2F%2Ffigma-alpha-api.s3.us-west-2.amazonaws.com%2Fimages%2Fea56c2c2-d4a3-40a9-8dcd-100b2a352e28">
+            <img alt="list" class="icon-image" src="https://figma-alpha-api.s3.us-west-2.amazonaws.com/images/ce5686e8-0770-452e-aba7-975ada0c3db8">
+            <button class="copy-button" title="SVG 복사" data-svg="https%3A%2F%2Ffigma-alpha-api.s3.us-west-2.amazonaws.com%2Fimages%2Fce5686e8-0770-452e-aba7-975ada0c3db8">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
                 <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
@@ -416,37 +416,12 @@
             </button>
           </div>
           <div class="icon-info">
-            <div class="icon-name">search</div>
+            <div class="icon-name">list</div>
             <div class="icon-meta">
               <span class="icon-group" title="그룹">기타</span>
-              <span class="icon-component-set" title="컴포넌트 세트">SystemIcon2</span>
+              <span class="icon-component-set" title="컴포넌트 세트">SystemIcon</span>
             </div>
-            <div class="icon-id">21:14</div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="ds-section" data-group="favorite">
-      <h2>favorite <span class="ds-count-badge">1</span></h2>
-      
-      <div class="icon-gallery">
-        <div class="icon-card" data-name="favorite-o" data-group="favorite" data-component-set="SystemIcon2">
-          <div class="icon-preview">
-            <img alt="favorite-o" class="icon-image" src="https://figma-alpha-api.s3.us-west-2.amazonaws.com/images/452f075a-fa58-4635-a40a-5eaaebe976e9">
-            <button class="copy-button" title="SVG 복사" data-svg="https%3A%2F%2Ffigma-alpha-api.s3.us-west-2.amazonaws.com%2Fimages%2F452f075a-fa58-4635-a40a-5eaaebe976e9">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
-                <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
-              </svg>
-            </button>
-          </div>
-          <div class="icon-info">
-            <div class="icon-name">favorite-o</div>
-            <div class="icon-meta">
-              <span class="icon-group" title="그룹">favorite</span>
-              <span class="icon-component-set" title="컴포넌트 세트">SystemIcon2</span>
-            </div>
-            <div class="icon-id">21:20</div>
+            <div class="icon-id">1:128</div>
           </div>
         </div>
       </div>
@@ -467,7 +442,7 @@
 <script>
   // 디버깅 정보 출력
   console.log('아이콘 갤러리가 로드되었습니다.');
-  console.log('총 아이콘 수:', 2);
+  console.log('총 아이콘 수:', 1);
   
   // 검색 기능
   const searchInput = document.getElementById('icon-search');
