--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
     <h1>아이콘 갤러리</h1>
     <div class="ds-metadata">
       <span class="ds-update-date">마지막 업데이트: 2025. 3. 10.</span>
-      <span class="ds-count">총 아이콘 수: 2</span>
+      <span class="ds-count">총 아이콘 수: 3</span>
     </div>
   </header>
   
@@ -395,7 +395,7 @@
       <label for="group-filter">그룹:</label>
       <select id="group-filter">
         <option value="all">모든 그룹</option>
-        <option value="기타">기타</option>
+        <option value="기타">기타</option><option value="favorite">favorite</option>
       </select>
     </div>
   </div>
@@ -445,6 +445,31 @@
         </div>
       </div>
     </section>
+    <section class="ds-section" data-group="favorite">
+      <h2>favorite <span class="ds-count-badge">1</span></h2>
+      
+      <div class="icon-gallery">
+        <div class="icon-card" data-name="favorite-o" data-group="favorite" data-component-set="SystemIcon">
+          <div class="icon-preview">
+            <img alt="favorite-o" class="icon-image" src="https://figma-alpha-api.s3.us-west-2.amazonaws.com/images/f1f3e6f2-a5f4-43f6-a538-504cbfb7f8ba">
+            <button class="copy-button" title="SVG 복사" data-svg="https%3A%2F%2Ffigma-alpha-api.s3.us-west-2.amazonaws.com%2Fimages%2Ff1f3e6f2-a5f4-43f6-a538-504cbfb7f8ba">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
+                <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
+              </svg>
+            </button>
+          </div>
+          <div class="icon-info">
+            <div class="icon-name">favorite-o</div>
+            <div class="icon-meta">
+              <span class="icon-group" title="그룹">favorite</span>
+              <span class="icon-component-set" title="컴포넌트 세트">SystemIcon</span>
+            </div>
+            <div class="icon-id">1:34</div>
+          </div>
+        </div>
+      </div>
+    </section>
     <div class="empty-state" id="empty-search" style="display: none;">
       <h3>검색 결과가 없습니다</h3>
       <p>다른 검색어나 필터를 시도해보세요.</p>
@@ -461,7 +486,7 @@
 <script>
   // 디버깅 정보 출력
   console.log('아이콘 갤러리가 로드되었습니다.');
-  console.log('총 아이콘 수:', 2);
+  console.log('총 아이콘 수:', 3);
   
   // 검색 기능
   const searchInput = document.getElementById('icon-search');
