아이콘 갤러리 업데이트

--- a/index.html
+++ b/index.html
@@ -428,10 +428,10 @@
       <h2>전체 <span class="ds-count-badge">1</span></h2>
       
       <div class="icon-gallery">
-        <div class="icon-card" data-name="home-o" data-group="전체" data-component-set="SystemIcon">
+        <div class="icon-card" data-name="search" data-group="전체" data-component-set="SystemIcon">
           <div class="icon-preview">
-            <img alt="home-o" class="icon-image" src="https://figma-alpha-api.s3.us-west-2.amazonaws.com/images/bc5d85b0-dd49-4617-85d8-c052870380cb">
-            <button class="copy-button" title="SVG 복사" data-svg="https%3A%2F%2Ffigma-alpha-api.s3.us-west-2.amazonaws.com%2Fimages%2Fbc5d85b0-dd49-4617-85d8-c052870380cb">
+            <img alt="search" class="icon-image" src="https://figma-alpha-api.s3.us-west-2.amazonaws.com/images/916f1722-861b-4325-9d0c-390c1d5ea342">
+            <button class="copy-button" title="SVG 복사" data-svg="https%3A%2F%2Ffigma-alpha-api.s3.us-west-2.amazonaws.com%2Fimages%2F916f1722-861b-4325-9d0c-390c1d5ea342">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
                 <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
@@ -439,12 +439,12 @@
             </button>
           </div>
           <div class="icon-info">
-            <div class="icon-name">home-o</div>
+            <div class="icon-name">search</div>
             <div class="icon-meta">
               
               <span class="icon-component-set" title="컴포넌트 세트">SystemIcon</span>
             </div>
-            <div class="icon-id">1:14</div>
+            <div class="icon-id">1:125</div>
           </div>
         </div>
       </div>
