아이콘 갤러리 업데이트

--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
     <h1>아이콘 갤러리</h1>
     <div class="ds-metadata">
       <span class="ds-update-date">마지막 업데이트: 2025. 4. 7.</span>
-      <span class="ds-count">총 아이콘 수: 3</span>
+      <span class="ds-count">총 아이콘 수: 4</span>
     </div>
   </header>
   
@@ -425,7 +425,7 @@
 
   <div class="ds-content">
     <section class="ds-section" data-group="전체">
-      <h2>전체 <span class="ds-count-badge">3</span></h2>
+      <h2>전체 <span class="ds-count-badge">4</span></h2>
       
       <div class="icon-gallery">
         <div class="icon-card" data-name="favorite" data-group="전체" data-component-set="SystemIcon">
@@ -485,6 +485,25 @@
             <div class="icon-id">1:136</div>
           </div>
         </div>
+        <div class="icon-card" data-name="home" data-group="전체" data-component-set="SystemIcon">
+          <div class="icon-preview">
+            <img alt="home" class="icon-image" src="https://figma-alpha-api.s3.us-west-2.amazonaws.com/images/0b06fd46-7063-4589-816c-6919205b1c46">
+            <button class="copy-button" title="SVG 복사" data-svg="https%3A%2F%2Ffigma-alpha-api.s3.us-west-2.amazonaws.com%2Fimages%2F0b06fd46-7063-4589-816c-6919205b1c46">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
+                <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
+              </svg>
+            </button>
+          </div>
+          <div class="icon-info">
+            <div class="icon-name">home</div>
+            <div class="icon-meta">
+              
+              <span class="icon-component-set" title="컴포넌트 세트">SystemIcon</span>
+            </div>
+            <div class="icon-id">1:123</div>
+          </div>
+        </div>
       </div>
     </section>
     <div class="empty-state" id="empty-search" style="display: none;">
@@ -503,7 +522,7 @@
 <script>
   // 디버깅 정보 출력
   console.log('아이콘 갤러리가 로드되었습니다.');
-  console.log('총 아이콘 수:', 3);
+  console.log('총 아이콘 수:', 4);
   
   // 검색 기능
   const searchInput = document.getElementById('icon-search');
