--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
     <header>
       <h1>아이콘 갤러리</h1>
       <p class="description">피그마에서 생성된 아이콘 컴포넌트를 모아놓은 갤러리입니다.</p>
-      <p class="generated-date">생성일: 2025. 4. 9.</p>
+      <p class="generated-date">생성일: 2025. 4. 11.</p>
     </header>
     
     <div class="search-container">
@@ -469,4 +469,4 @@
   </script>
   
 </body>
-</html>
+</html>  
