아이콘 갤러리 페이지 업데이트

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
     <header>
       <h1>아이콘 갤러리</h1>
       <p class="description">피그마에서 생성된 아이콘 컴포넌트를 모아놓은 갤러리입니다.</p>
-      <p class="generated-date">생성일: 04/13/2025</p>
+      <p class="generated-date">생성일: 2025. 5. 8.</p>
     </header>
     
     <div class="search-container">
@@ -498,4 +498,4 @@
     });
   </script>
 </body>
-</html>  
+</html> 
